--- a/css/components/button.css
+++ b/css/components/button.css
@@ -1,12 +1,17 @@
 .primary-btn {
   background-color: var(--color-primary);
+  border-radius: 10rem;
+  padding: 2rem 4rem;
   color: #fff;
+  font-size: 2rem;
   font-weight: 700;
-  font-size: 2.8rem;
-  border-radius: 50rem;
-  padding: 2.2rem 3.2rem;
+  display: flex;
+	align-items: center;
+	justify-content: center;
+  white-space: nowrap;
   border: none;
-  max-width: fit-content;
+  width: fit-content;
+  height: fit-content;
 }
 
 @media (max-width: 1360px) {
