--- a/css/pages/cursoFisica.css
+++ b/css/pages/cursoFisica.css
@@ -11,6 +11,7 @@
 #hero .content {
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	gap: 5rem;
 }
 
@@ -187,3 +188,20 @@ iframe {
 	margin-top: 1.5rem;
 }
 
+/* --------------PRICE DIVIDER */
+#price-divider {
+	background-color: var(--color-secondary);
+	padding: 6rem 8rem;
+}
+
+#price-divider .content {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 10rem;
+}
+
+.price-divider-title {
+	font-size: 2.8rem;
+	text-align: center;
+}
