added target audience section

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,10 @@ ul {
   list-style: none;
 }
 
+section > header {
+  margin-bottom: 6rem;
+}
+
 body {
   color: #fff;
   font-family: 'Poppins', sans-serif;
