--- a/css/pages/cursoFisica.css
+++ b/css/pages/cursoFisica.css
@@ -5,23 +5,19 @@
   display: flex;
 	flex-direction: column;
   justify-content: center;
-	padding: 5rem 8rem;
+	padding: 6rem 8rem;
 }
 
 #hero .content {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	gap: 5rem;
+	gap: 4rem;
 }
 
 .hero-title {
 	text-align: center;
-	font-size: 4.2rem;
-}
-
-.hero-title.orange {
-	color: var(--color-primary);
+	font-size: 3.6rem;
 }
 
 iframe {
@@ -34,8 +30,8 @@ iframe {
 .hero-description {
 	text-align: center;
 	font-weight: 300;
-	font-size: 2rem;
-	margin: 2rem 0 6rem 0;
+	font-size: 1.8rem;
+	margin-top: 1.5rem;
 }
 
 .hero-cta {
@@ -50,7 +46,7 @@ iframe {
 /* --------------TESTIMONIALS */
 #testimonials {
 	color: #000;
-	padding: 8rem 10rem;
+	padding: 6rem 8rem;
 }
 
 #testimonials .content {
@@ -62,7 +58,7 @@ iframe {
 
 .testimonials-title {
 	text-align: center;
-	font-size: 4.2rem;
+	font-size: 3.6rem;
 }
 
 .testimonials-title:nth-child(2) {
@@ -89,7 +85,7 @@ iframe {
 
 /* --------------DIVIDER 1 */
 #divider {
-	padding: 2rem 8rem 8rem 8rem;
+	padding: 0 8rem 6rem 8rem;
 }
 
 #divider .content {
@@ -101,7 +97,7 @@ iframe {
 }
 
 .tip {
-	font-size: 2.8rem;
+	font-size: 2.4rem;
 }
 
 .tip.underlined {
@@ -116,9 +112,8 @@ iframe {
 }
 
 .course-details-title {
-	font-size: 4.2rem;
+	font-size: 3.6rem;
 	text-align: center;
-	margin-bottom: 8rem;
 }
 
 #course-details .content {
@@ -165,8 +160,8 @@ iframe {
 }
 
 .bonus-title {
-	margin-bottom: 6rem;
-	font-size: 4.2rem;
+	font-size: 3.6rem;
+	text-align: center;
 }
 
 .card.bonus {
@@ -178,7 +173,7 @@ iframe {
 .card-title.bonus {
 	text-align: left;
 	font-size: 2.4rem;
-	font-weight: 600;
+	font-weight: 700;
 }
 
 .card-description.bonus {
@@ -204,4 +199,35 @@ iframe {
 .price-divider-title {
 	font-size: 2.8rem;
 	text-align: center;
+}
+
+/* --------------TARGET AUDIENCE */
+#target-audience {
+	padding: 6rem 8rem;
+}
+
+.target-audience-title {
+	text-align: center;
+	font-size: 3.6rem;
+	margin-bottom: 6rem;
+}
+
+#target-audience .content {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	gap: 4rem;
+}
+
+.target-audience-card {
+	flex: 0 0 30%;
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+	padding: 3.5rem;
+	box-shadow: 1px 4px 12px 1px rgba(251, 133, 0, .5),
+	-1px -4px 12px 1px rgba(251, 133, 0, .5);
+	border: 1px solid var(--color-primary);
+	border-radius: 8px;
+	color: #888;
 }
