--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 :root {
-  --color-primary: #FB8500;
+  --color-primary: rgb(251, 133, 0);
   --color-primary-50: rgba(251, 133, 0, .5);
-  --color-secondary: #023047;
+  --color-secondary: rgb(2, 48, 71);
   --color-tertiary: #219cba;
   --color-tertiary-halfed: rgba(33, 156, 186, .5)
 }
@@ -15,6 +15,12 @@
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
+}
+
+body {
+  color: #fff;
+  font-family: 'Poppins', sans-serif;
+  font-size: 1.6rem;
 }
 
 h1,
@@ -35,26 +41,43 @@ ul {
   list-style: none;
 }
 
+section {
+  padding: 6rem 8rem;
+}
+
 section > header {
   margin-bottom: 6rem;
 }
 
-body {
-  color: #fff;
-  font-family: 'Poppins', sans-serif;
-  font-size: 1.6rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  min-width: 98vw;
+header > h1:not(:last-child) {
+  margin-bottom: 0 !important;
 }
 
 .content {
   max-width: 144rem;
+  margin: 0 auto;
 }
 
-@media (max-width: 1360px) {
+.wrapper {
+  width: 100%;
+}
+
+@media (max-width: 1200px) {
   html {
-    font-size: 56.25%;
+    font-size: 56.25%; /* 1rem = 9px */
   }
+}
+
+@media (max-width: 992px) {
+  html {
+    font-size: 50%; /* 1rem = 8px */
+  }
+}
+
+@media (max-width: 768px) {
+  html {
+    font-size: 43.75%; /* 1rem = 7px */
+  }
+
+
 }
