--- a/css/pages/cursoFisica.css
+++ b/css/pages/cursoFisica.css
@@ -87,10 +87,17 @@ iframe {
 }
 
 .testimonials-card {
+	display: flex;
+	align-items: center;
+	background-color: rgb(242, 242, 242);
 	border: 2px solid var(--color-primary);
-	padding: 3rem;
-	min-width: 33rem;
-	width: 28rem;
+	width: fit-content;
+	border-radius: 6px;
+	padding: 2rem;
+}
+
+.testimonials-card img {
+	width: 50rem;
 	border-radius: 6px;
 }
 
@@ -99,6 +106,12 @@ iframe {
 	justify-content: center;
 	gap: 4rem;
 	flex-wrap: wrap;
+}
+
+@media (max-width: 400px) {
+	.testimonials-card img {
+		width: 40rem;
+	}
 }
 
 /* --------------DIVIDER 1 */
